Fixed remote images, blog is usable now

--- a/content/posts/arreglos-de-objetos-en-javascript-como-crear-y-actualizar-su-contenido.mdx
+++ b/content/posts/arreglos-de-objetos-en-javascript-como-crear-y-actualizar-su-contenido.mdx
@@ -1,19 +1,20 @@
 ---
 date: 2020-07-16T23:41:45-04:00
-title: 'Arreglos de objetos en Javascript: Como crear y actualizar su contenido'
+title: "Arreglos de objetos en Javascript: Como crear y actualizar su contenido"
 hero_image: "/content/images/pierre-bamin-p2pogrtgpra-unsplash.jpg"
 slug: arreglos-de-objetos-en-javacript-crear-y-actualizar
-description: En Javascript existen diversas formas de crear un arreglo de objetos
+description:
+  En Javascript existen diversas formas de crear un arreglo de objetos
   y varias formas de manipular su contenido. Para ello podemos usar varios métodos
   nativos de Javascript tanto de forma mutable como inmutable
 keywords:
-- javascript
-- array
-- arreglos
-- es6
+  - javascript
+  - array
+  - arreglos
+  - es6
 banner: https://res.cloudinary.com/matiasfha/image/upload/v1595045136/pierre-bamin-P2POGRtGprA-unsplash_gx6ozd.jpg
-
 ---
+
 Javascript es un lenguaje complejo dada su flexibilidad.
 
-https://egghead.io/lessons/javascript-4-formas-de-llenar-un-arreglo-en-javascript/embed
+https://egghead.io/lessons/javascript-4-formas-de-llenar-un-arreglo-en-javascript
