Fixed footer post layout on mobile

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -1,30 +1,26 @@
 ---
-title: About Matias Hernandez 
-description: All about Matias Hernandez 
+title: About Matias Hernandez
+description: All about Matias Hernandez
 ---
 
 # Hola! Soy Matias 👋
 
-
 Soy un ingeniero de software chileno, padre, podcaster y creador de contenido.
-Naci en 1986 y creci en una pequeaña ciuidad de la costa del Maule, Chile. Estudie Ingenieria Civil Informática (algo así como Ingeniería en Computación) y obtuve mi primer trabajo real en una Startup de unos compañeros creando software de visión computacional.
-
+Naci en 1986 y crecí en una pequeaña ciuidad de la costa del Maule, Chile. Estudié Ingenieria Civil Informática (algo así como Ingeniería en Computación) y obtuve mi primer trabajo real en una Startup de unos compañeros creando software de visión computacional.
 
 He escrito código para
-* Diversos clientes por medio de Toptal
-* Mozio.com
-* Modus Create
-* Flexiana
-* g2i
+
+- Diversos clientes por medio de Toptal
+- Mozio.com
+- Modus Create
+- Flexiana
+- g2i
 
 Actualmente he agregado al trabajo de construir productos el rol de "educador". Estoy en la misión de crear contenido sobre desarrollo web que pueda aportar a la comunidad de habla hispana y así ayudar a otros por medio de lo que yo ya he aprendido. Para esto tengo dos podcasts, escribo en este sitio y creo contenido en video para [egghead.io](http://egghead.io/instructors/matias-francisco-hernandez-arellano)
-y aveces tambien en [Twitter](https://twitter.com/matiasfha) 
+y aveces tambien en [Twitter](https://twitter.com/matiasfha)
 
 Mientras estaba en la Universidad conocí a quien se convirtío en mi compañera de vida y esposa con quien tengo dos hermosos hijos.
 
+Te dejo aquí otros enlaces que quiza te interesen.
 
-> Algún otro contenido que comparto en este sitio que quiza son de interes pero que no estan en la navegación principal.
->
-> - [Contacto](/contact) - Escribeme!
-> - [Links](/links) - a bunch of links to stuff I work on
-> - [Uses](/uses) - Enlaces a las cosas que utilizo para mi trabajo o intereses en general 
+> - [Uses](/uses) - Enlaces a las cosas que utilizo para mi trabajo o intereses en general
