--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -24,3 +24,4 @@ Mientras estaba en la Universidad conocí a quien se convirtío en mi compañera
 Te dejo aquí otros enlaces que quiza te interesen.
 
 > - [Uses](/uses) - Enlaces a las cosas que utilizo para mi trabajo o intereses en general
+> - [AMA](https://github.com/matiasfha/ama) - Pregunta lo que quiera
