--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -5,7 +5,7 @@ description: All about Matias Hernandez
 
 # Hola! Soy Matias 👋
 
-Soy un ingeniero de software chileno, padre, podcaster y creador de contenido.
+Soy un ingeniero de producto/software chileno, padre, podcaster y creador de contenido.
 Naci en 1986 y crecí en una pequeaña ciuidad de la costa del Maule, Chile. Estudié Ingenieria Civil Informática (algo así como Ingeniería en Computación) y obtuve mi primer trabajo real en una Startup de unos compañeros creando software de visión computacional.
 
 He escrito código para
