--- a/src/pages/uses.mdx
+++ b/src/pages/uses.mdx
@@ -1,3 +1,8 @@
+---
+title: Uses
+description: Diferentes herramientas y software que utilizo para trabajar y crear contenido
+---
+
 # Uses
 
 Make sure to check out [uses.tech](https://uses.tech) for a list of everyone's /uses pages!
