Better Share, new inviteme a coffee

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -25,3 +25,4 @@ Te dejo aquí otros enlaces que quiza te interesen.
 
 > - [Uses](/uses) - Enlaces a las cosas que utilizo para mi trabajo o intereses en general
 > - [AMA](https://github.com/matiasfha/ama) - Pregunta lo que quiera
+> - [Buy me a coffe](/invitameuncafe) - Apoya mis podcasts invitandome un café
