--- a/content/posts/4-formas-de-eliminar-elementos-duplicados-en-un-arreglo-con-javascript.mdx
+++ b/content/posts/4-formas-de-eliminar-elementos-duplicados-en-un-arreglo-con-javascript.mdx
@@ -24,9 +24,9 @@ bannerCredit: <span>Photo by <a href="https://unsplash.com/@draufsicht?utm_sourc
 La manipulación de arreglos es una de las tareas más comunes y constantes a la hora de desarrollar una aplicación. Los arreglos son estructuras de datos básicas en cualquier programa. Una de estas tareas de manipulación es la de remover elementos duplicados de un arreglo.  
 Javascript, por su naturaleza flexible, ofrece variadas formas de efectuar esta tarea y la elección de cuál utilizar corresponde tanto a la experiencia del desarrollador como al caso de uso.
 
-#### **TLDR;** Lección en video en \[egghead.io\]
+#### **TLDR;** Lección en video en [egghead](https://egghead.io/lessons/javascript-4-formas-de-remover-elementos-duplicados-de-un-arreglo-con-javascript?pl=manipulacion-de-arreglos-con-javascript-12bd?af=4cexzz)
 
-https://egghead.io/lessons/javascript-4-formas-de-remover-elementos-duplicados-de-un-arreglo-con-javascript?pl=manipulacion-de-arreglos-con-javascript-12bd?af=4cexzz
+<EggheadLesson lessonId="javascript-4-formas-de-remover-elementos-duplicados-de-un-arreglo-con-javascript" />
 
 #### **Array.filter**
 
@@ -38,14 +38,14 @@ De forma interna, `filter` itera sobre los elementos del arreglo y aplica la fun
 
 Para este caso de remover elementos duplicados utilizamos como método auxiliar la función `Array.indexOf`. Este método retorna Array.indexOf retorna el primer indice del arreglo en donde se encuentre un elemento dado.
 
-    /* IndexOf */
+```javascript
     let data = [1,2,6,1,2,5,9,'33','33'];
     
     let result = data.filter((item,index)=>{
       return data.indexOf(item) === index;
     })
     console.log(result); //[1,2,6,5,9,'33']
-
+```
 En este caso, podemos identificar un duplicado cuando el indice no es igual al resultado de `indexOf`
 
 `data.indexOf(item) === index` ,retornará siempre la primera ocurrencia del `item`.
@@ -56,6 +56,7 @@ El objeto global **Set** es una estructura de datos, una colección de valores q
 
 Es posible iterar sobre los elementos en el orden de inserción.
 
+```javascript
     let data = [1,2,6,1,2,5,9,'33','33'];
     
     const dataArr = new Set(data);
@@ -63,6 +64,7 @@ Es posible iterar sobre los elementos en el orden de inserción.
     let result = [...dataArr];
     
     console.log(result); //[1,2,6,5,9,'33']
+```
 
 El caso de utilizar **Set** para remover duplicados es bastante simple, creamos un nuevo **Set** basado en el arreglo original utilizando _new Set_.
 
@@ -78,6 +80,7 @@ El método `Array.reduce` también puede ser utilizado con el mismo propósito.
 
 `Array.reduce` recibe dos parámetros, una función , llamada reductora, que tiene a lo menos dos argumentos: el acumulador y el item actual de la iteración y como segundo parámetro que indica el valor inicial en este caso un arreglo vacío
 
+```javascript
     let data = [1,2,6,1,2,5,9,'33','33'];
     
     const result = data.reduce((acc,item)=>{
@@ -88,6 +91,7 @@ El método `Array.reduce` también puede ser utilizado con el mismo propósito.
     },[])
     
     console.log(result); //[1,2,6,5,9,'33']
+```
 
 En este caso la función utilizada simplemente revisa si el item actual se encuentra dentro del resultado identificado por la variable `acc`, de no estarlo, simplemente agrega el valor al acumulador
 
@@ -99,6 +103,8 @@ Aquí es necesario utilizar un arreglo auxiliar para almacenar el resultado del 
 
 Al iterar sobre el arreglo se utiliza un bloque condicional que verifica que el item no exista ya dentro del arreglo de valores únicos utilizando `Array.includes`, que permite determinar si un elemento existe o no dentro del arreglo.
 
+```javascript
+
     let data = [1,2,6,1,2,5,9,'33','33'];
     
     const result = [];
@@ -109,7 +115,8 @@ Al iterar sobre el arreglo se utiliza un bloque condicional que verifica que el 
     	}
     })
     console.log(result); //[1,2,6,5,9,'33']
+```
 
-`Array.forEach`al igual que cualquier otro método de iteración directa es una forma imperativa y es de baja performance dado que requiere iterar varias veces sobre el mismo elemento - `Array.includes`también itera sobre los elementos - por lo que es de orden O(n²).
+`Array.forEach `al igual que cualquier otro método de iteración directa es una forma imperativa y es de baja performance dado que requiere iterar varias veces sobre el mismo elemento - `Array.includes` también itera sobre los elementos - por lo que es de orden O(n²).
 
-En resumen las opciones para eliminar duplicado son variadas pero se sustenan en la misma premisa. El uso de iteraciones para corroborar si un elemente ya existe o no, y el uso de estructuras de datos más complejas como Set
+En resumen las opciones para eliminar duplicado son variadas pero se sustenan en la misma premisa. El uso de iteraciones para corroborar si un elemente ya existe o no, y el uso de estructuras de datos más complejas como Set.
