New egghead request, new header layout

--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -25,4 +25,6 @@ Te dejo aquí otros enlaces que quiza te interesen.
 
 > - [Uses](/uses) - Enlaces a las cosas que utilizo para mi trabajo o intereses en general
 > - [AMA](https://github.com/matiasfha/ama) - Pregunta lo que quiera
-> - [Buy me a coffe](/invitameuncafe) - Apoya mis podcasts invitandome un café
+> - [Buy me a coffe](/invitameuncafe) - Apoya mis podcasts invitandome un café.
+> - [Enviame un mensaje de voz](/mensajedevoz) Puedes enviarme un mensaje de voz con una pregunta o feedback o para ser parte de un episodio de Café con Tech.
+> - [Calendariza una llamada](/calendario) Si buscas una conversación directa, puedes calendarizar una video llamada.
