--- a/content/posts/overview-de-algunos-modernos-lenguajes-de-programacion.mdx
+++ b/content/posts/overview-de-algunos-modernos-lenguajes-de-programacion.mdx
@@ -18,14 +18,15 @@ bannerCredit: <span>Photo by <a href="https://unsplash.com/@steve_j?utm_source=u
   Johnson</a> on <a href="https://unsplash.com/s/photos/modern-languajge?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText">Unsplash</a></span>
 
 ---
+
 > Este post es también parte del [episodio 24](http://www.cafecon.tech/1081172/5581075-overview-de-algunos-modernos-lenguajes-de-programacion) de [Cafe con Tech](http://www.cafecon.tech)
 
-https://www.buzzsprout.com/1081172/5581075-overview-de-algunos-modernos-lenguajes-de-programacion/player 
+http://www.buzzsprout.com/1081172/5581075-overview-de-algunos-modernos-lenguajes-de-programacion/player
 
 Existen muchos lenguajes de programación, quizá demasiados, cada uno enfocado a solucionar algún problema en particular o con alguna orientación diferente. Algunos de estos han sucumbido a los cambios y otros se han mantenido estoicos durante los años y unos pocos han superado todo cambio y son parte escencial de la tecnología que usamos hoy en día.
 Entre estos añosos monstruos tenemos C, nacido en 1972, C++ en 1985, Java, Javascript, Python, Php, Ruby, todos ellos nacidos en los 90. Si bien estos leguajes aún siguen en boga y tienen un gran mercado, es fácil ver que se han vuelto muy complejos a la hora de enfrentar los problemas de hoy en día
 
-El término **moderno** es una clasificación a lo menos controversial, es complejo definir que es moderno ya que cada uno puede tener prejucios y preconceptos sobre que considerar actual o no, pero en el scope de este post consideraremos modernos a lenguajes nacidos durante la **última  decada** y que contemplan algunas características que en general la comunidad de desarrolladores a llegado a desear y definir como básicos.
+El término **moderno** es una clasificación a lo menos controversial, es complejo definir que es moderno ya que cada uno puede tener prejucios y preconceptos sobre que considerar actual o no, pero en el scope de este post consideraremos modernos a lenguajes nacidos durante la **última decada** y que contemplan algunas características que en general la comunidad de desarrolladores a llegado a desear y definir como básicos.
 
 ### La necesidad de la invención
 
@@ -35,32 +36,32 @@ Es por esto que cada año vemos el nacimiento de algún nuevo lenguaje que inclu
 
 Algunas de estas características son:
 
-* Soporte nativo para concurrencia
-* Inmutabilidad
-* Inferencia de tipos y type safety
-* Programación funcional,
-* Tipos estáticos
-* Nuevos tipos de sintaxis
-* Developer Experience
+- Soporte nativo para concurrencia
+- Inmutabilidad
+- Inferencia de tipos y type safety
+- Programación funcional,
+- Tipos estáticos
+- Nuevos tipos de sintaxis
+- Developer Experience
 
 Algunos de estos lenguajes, que en base a estas caracterísitcas, se muestran como **modernos** son:
 
-* Rust
-* Elm
-* Clojure
-* Elixir
-* Kotlin
-* Swift
-* Scala
-* Grain
-* Unison
-* Dark
+- Rust
+- Elm
+- Clojure
+- Elixir
+- Kotlin
+- Swift
+- Scala
+- Grain
+- Unison
+- Dark
 
 Lo que sigue es un overview de algunos de estos lenguajes, describiendo algunos de los features que cada uno de ellos presenta, me enconfaré en Rust, Elm y Clojure. Intencionalmente me he dejado fuera Kotlin y Swift.
 Kotlin y Swift son claramente lenguajes modernos,nacieron para cubrar una necesidad moderna, desarrollar aplicaciones móviles, los dejo fuera de este listado por que:
 
-* Tienen un futuro claro
-* Son lenguajes de nicho (cada uno para su plataforma)
+- Tienen un futuro claro
+- Son lenguajes de nicho (cada uno para su plataforma)
 
 Comenzaremos esta lista con **Rust** un lenguaje que considero tiene un gran potencial y que ha crecido enormemente tanto en su set de características como en el tamaaño de su comunidad.
 
@@ -70,20 +71,21 @@ Se autodefine como un lenguaje para **empoderar a todos a construir software con
 
 Uno de sus objetivos es ser eficitiente y tener una gran performance en runtime. Otras de sus características son:
 
-* Compila como binario, no tiene garbage collector es como C++
-* Tiene interoperación con C/C++
-* Tiene un manejador de paquetes, plugins para editores, material de aprendizaje (ej: [https://github.com/rust-lang/rustlings](https://github.com/rust-lang/rustlings) y [esta colección en egghead](https://egghead.io/playlists/learning-rust-by-solving-the-rustlings-exercises-a722?af=4cexzz) por [Chris Biscardi](https://www.christopherbiscardi.com/the-rust-programming-language))
-* Es Backward compatible
+- Compila como binario, no tiene garbage collector es como C++
+- Tiene interoperación con C/C++
+- Tiene un manejador de paquetes, plugins para editores, material de aprendizaje (ej: [https://github.com/rust-lang/rustlings](https://github.com/rust-lang/rustlings) y [esta colección en egghead](https://egghead.io/playlists/learning-rust-by-solving-the-rustlings-exercises-a722?af=4cexzz) por [Chris Biscardi](https://www.christopherbiscardi.com/the-rust-programming-language))
+- Es Backward compatible
 
   Al mismo tiempo, Rust se define como un lenguaje confiable, y esta confiablidad viene dada por características como las siguientes
-* Revisión de tipos estáticos
-* Un sistema de datos seguro (si el compilador te dice que es cierto tipo, entonces lo es )
-* Tiene datos reales, nada de \`any\` (alo! Typescript)
-* No incluye el [“error del billon de dolares”](https://www.youtube.com/watch?v=ybrQvs4x0Ps), es decir, no existen referencias \`null\` ni \`undefined\` ni similares.
-* Tiene un compilador que de verdad entrega ayuda cuando existen errores
-* Es un lenguaje con datos inmutables por defecto, pero ofrece formas de modicar este comportamiento
-* Tiene seguros de acceso a memorio **no data races**
-* Si compila, usualmente significa que funciona
+
+- Revisión de tipos estáticos
+- Un sistema de datos seguro (si el compilador te dice que es cierto tipo, entonces lo es )
+- Tiene datos reales, nada de \`any\` (alo! Typescript)
+- No incluye el [“error del billon de dolares”](https://www.youtube.com/watch?v=ybrQvs4x0Ps), es decir, no existen referencias \`null\` ni \`undefined\` ni similares.
+- Tiene un compilador que de verdad entrega ayuda cuando existen errores
+- Es un lenguaje con datos inmutables por defecto, pero ofrece formas de modicar este comportamiento
+- Tiene seguros de acceso a memorio **no data races**
+- Si compila, usualmente significa que funciona
 
 Rust es un lenguaje complejo, con muchos conceptos que aprende, pero tiene una comunidad bastante activa lo que ayuda mucho a la hora de aprender. Nacido el 2010 diseñador por [Graydon Hoare](https://github.com/graydon), actualmente podemos encontrar 6 grandes conferencias, además su desarrollo es constante contanto con varios developers full-time y una gran cantidad de colaboradores.
 
@@ -96,7 +98,7 @@ Un ejemplo de código en Rust, para pattern matching.
           Dime,
           Quarter,
       }
-      
+
       fn value_in_cents(coin: Coin) -> u8 {
           match coin {
               Coin::Penny => 1,
@@ -108,13 +110,14 @@ Un ejemplo de código en Rust, para pattern matching.
 ```
 
 ### [Elm](http://elm-lang.org/)
+
 Este es un lenguaje que personalmente disfrute mucho mientras experimentaba con el, Elm se define a si mismo como "Un lenguaje disfrutante para crear aplicaciones web confiables". Puede ser considerado una alternativa a Javascript ya que (actualmente) el resultado de su compilación es un bundle javascript para ser ejecutado en el navegador, por lo que se subentiende que es de uso exclusivo para el desarrollo de aplicaciones web.
 Cuando Elm se definie como disfrutable, es por que pone gran parte de su foco en características de developer experience y developer ergonómicos, tiene un gran compilador y mensajes de error realente útiles.
-Es un lenguaje pequeño y simple con un objetivo simple y claro, crear aplicaciones web eficientes y confiables. 
+Es un lenguaje pequeño y simple con un objetivo simple y claro, crear aplicaciones web eficientes y confiables.
 Tiene compatibilidad con Javascript, es decir, puedes utilizar librerías escritas en JS dentro de tu app Elm, o anexar pequeñas partes de código Elm dentro de tu app Javascript para ir migrando poco a poco.
 Como todo lenguaje que se precie de tal actualmente, también posee un ecosistema de paquetes y un manejador de dependencies, editor de plugin y material de aprendizaje.
 
-Es usualmente comparado con algunos frameworks Javascript, lo que no es técnicamente correcto ya que Elm es un lenguaje en si mismo, aún así, esta comparación beneficia a elm en casi todas las ocasiones (excepto con Svelte quizá). Elm es un "todo en uno", al escribir código Elm no se requiere framework, Elm es  el framework en si mismo.
+Es usualmente comparado con algunos frameworks Javascript, lo que no es técnicamente correcto ya que Elm es un lenguaje en si mismo, aún así, esta comparación beneficia a elm en casi todas las ocasiones (excepto con Svelte quizá). Elm es un "todo en uno", al escribir código Elm no se requiere framework, Elm es el framework en si mismo.
 
 Al igual que Rust, parte de sus características importantes es ser un lenguaje confiable, y esta confiabilidad viene dada por características como:
 
@@ -122,13 +125,15 @@ Al igual que Rust, parte de sus características importantes es ser un lenguaje 
 - Tipos estáticos
 - Un sistema de datos seguro
 - No incluye el [“error del billon de dolares”](https://www.youtube.com/watch?v=ybrQvs4x0Ps), es decir, no existen referencias \`null\` ni \`undefined\` ni similares, si no, que utiliza un tipo de dato Maybe.
-- Los mensajes de error del compilad sin lugar a duda los mejores existentes. 
+- Los mensajes de error del compilad sin lugar a duda los mejores existentes.
+
 * No runtime exceptions, gracias a su inferencia de datos puede detectar casos complejos y asi evitar errores en producción.
 
 Nacido el 2012 de la mano de [Evan Czaplicki](https://github.com/evancz) como único desarrollador y actual Benevolente Dictador.
 La comunidad Elm es pequeña pero bastante activa, actualmente tiene 5 grandes conferencias.
 
 Un ejemplo de código Elm, para [ejecutar una animación](https://elm-lang.org/examples/animation)
+
 ```elm
 import Playground exposing (..)
 
@@ -151,7 +156,8 @@ view time =
 ```
 
 ### [Elixir](https://elixir-lang.org/)
-Elixir es un lenguaje dinámico y funcional nacido para construir aplicaciones escalables y mantenibles. Elixir corre sobre [BEAM la Erlang VM](https://en.wikipedia.org/wiki/BEAM_(Erlang_virtual_machine)) y toma todo su pode que es conocida por ejecutar sistemas distribuidos de baja latencia.
+
+Elixir es un lenguaje dinámico y funcional nacido para construir aplicaciones escalables y mantenibles. Elixir corre sobre [BEAM la Erlang VM](<https://en.wikipedia.org/wiki/BEAM_(Erlang_virtual_machine)>) y toma todo su pode que es conocida por ejecutar sistemas distribuidos de baja latencia.
 
 Se utiliza mayoritariamente para desarrolo web, software embebido, procesamiento multimedia, etc.
 
@@ -167,6 +173,7 @@ Nacido el 2011 por [José Valim](https://github.com/josevalim), parte del equipo
 Tiene una comunidad activa y una gran conferencia llama ElixirConf en total hay 13 grandes eventos a nivel mundial.
 
 Un ejemplo de código Elixir
+
 ```elixir
 defmodule Math do
   def sum_list([head | tail], accumulator) do
@@ -183,7 +190,8 @@ IO.puts Math.sum_list([1, 2, 3], 0) #=> 6
 ```
 
 ### [Clojure](https://clojure.org)
-Se trata de un lenguaje de propósito general robusto, practico y rápido con caracterísiticas para formar una herramienta simple, coherente y poderosa. 
+
+Se trata de un lenguaje de propósito general robusto, practico y rápido con caracterísiticas para formar una herramienta simple, coherente y poderosa.
 
 Clojure es un dialecto de [Lisp](https://es.wikipedia.org/wiki/Lisp) y comparte la filosofía codigo-como-datos.
 Esto se conoce como homoiconocidad. El propio programa ecrito puede ser manipulado como data usando el propio lenguaje.
@@ -218,5 +226,3 @@ nil
 
 Existen variados lenguajes de programación e incluso siguen desarrollándose nuevas ideas e implementaciones. Algunos lenguajes consiguen tener un gran tracción dado sus características y su comunidad.
 En mi opinión es importante intentar al menos mantenerse al tanto sobre algunos de estos lenguajes y ojalá poder experimentar con ellos ya que de por seguro serán las herramientas del futuro.
-
-
