--- a/content/posts/arreglos-de-objetos-en-javascript-como-crear-y-actualizar-su-contenido.mdx
+++ b/content/posts/arreglos-de-objetos-en-javascript-como-crear-y-actualizar-su-contenido.mdx
@@ -23,7 +23,7 @@ Un arreglo puede ser creado y completado de variadas formas incluyendo la creaci
 
 En el siguiente vídeo muestro 4 formas de crear un arreglo de objetos
 
-https://egghead.io/lessons/javascript-4-formas-de-llenar-un-arreglo-en-javascript
+<EggheadLesson lessonId="javascript-4-formas-de-llenar-un-arreglo-en-javascript" />
 
 La primera opción es el uso de [Array.fill](https://developer.mozilla.org/es/docs/Web/JavaScript/Referencia/Objetos_globales/Array/fill "Array.fill") este método completa un arreglo cambiando todos los elementos por un valor estático, es decir, si utilizamos, como en el ejemplo, una función que cree objetos, el arreglo será completado con el mismo objeto cada vez ya que "copia su referencia y rellena el arreglo con referencias a dicho objeto."
 
