--- a/content/posts/jamstack-que-es-ssg-y-ssr.mdx
+++ b/content/posts/jamstack-que-es-ssg-y-ssr.mdx
@@ -20,7 +20,7 @@ bannerCredit: <span>Photo by <a href="https://unsplash.com/@arstyy?utm_source=un
 ---
 > TLDR; Este contenido fue publicado como episodio mi podcast [Café con Tech](http://www.cafecon.tech/1081172/6725749-jamstack-que-es-ssg-y-ssr)
 
-<Buzzprout buzzproutId="1081172/6725749-jamstack-que-es-ssg-y-ssr" />
+<Buzzsprout buzzsproutId="1081172/6725749-jamstack-que-es-ssg-y-ssr" />
 
 Cuando hablamos de _JAMstack_ consideramos una colección de tecnologías que se complementan para permitir la producción de aplicaciones mediante el uso de sitios estáticos.
 
