--- a/content/posts/revision-de-este-2020.mdx
+++ b/content/posts/revision-de-este-2020.mdx
@@ -42,25 +42,25 @@ Como comenté, mi "carrera" creando contenido inició con mis primeros videos en
 
 Algo que afectó de muy buena manera la motivación por continuar este proceso fue el apoyo y soporte del equipo de egghead y la llegada del equipo de audio que proveen a sus instructores.
 
-<Tweet tweetLink="matiasfha/status/1278390851299880970">
- 
- El equipo de audio mejoró notablemente la calidad de mis podcasts y videos en egghead lo que crea mucha más motivación.
-  
+<Tweet tweetLink="matiasfha/status/1278390851299880970" />
+
+El equipo de audio mejoró notablemente la calidad de mis podcasts y videos en egghead lo que crea mucha más motivación.
+
 También en este periodo fui aceptado en el programa [Auth0 Ambassadors](https://auth0.com/ambassador-program) y en este último mes también fui honrado con unirme a [freecodecamp](https://auth0.com/ambassador-program) como autor.
-  
+
 Otra línea de trabajo que me agregue encima fue la creación de una [lista de correo personal](http://matiashernandez.ck.page) que comencé en octubre con este [número](https://ckarchive.com/b/0vuwh9hnp582) la idea de esta lista es compartir un pequeño post con **algo en que pensar** y un listado de contenido seleccionado. Puedes unirte [aquí](http://matiashernandez.ck.page)
 
 Por un momento la idea era publicar contenido de forma semanal, incluyendo:
 
-* 1 Episodio de Café con Tech
-* 1 Episodio de Control Remoto
-* 1 Post
-* 1 Video en Egghead
-* 1 Newsletter
-    
+  - 1 Episodio de Café con Tech
+  - 1 Episodio de Control Remoto
+  - 1 Post
+  - 1 Video en Egghead
+  - 1 Newsletter
+  
   Algo que claramente se convirtió en una meta muy grande para ser un proyecto lateral, por lo que para evitar el burnout tuve que disminuir y pensar bien cuál de estos contenidos es prioridad.
-    
-  ¡Por cierto dentro de este proceso  también comencé con [algunas charlas](https://presentaciones.matiashernandez.dev), algo que he disfrutado muchísimo!.
+  
+  ¡Por cierto dentro de este proceso también comencé con [algunas charlas](https://presentaciones.matiashernandez.dev), algo que he disfrutado muchísimo!.
 
 ## Mis seleccionados del año
 
@@ -72,29 +72,29 @@ En total publiqué 21 artículos en el blog, algunos de ellos republicados en [h
 
 #### En el blog
 
-\- [4 Formas De Eliminar Elementos Duplicados En Un Arreglo Con Javascript](https://matiashernandez.dev/4-formas-de-eliminar-elementos-duplicados-en-un-arreglo-con-javascript)
-  - [No Necesitas Redux](https://matiashernandez.dev/no-necesitas-redux)
-  - [Algunos Errores Comunes Al Utilizar React Hooks](https://matiashernandez.dev/algunos-errores-comunes-al-utilizar-react-hooks)
+- [4 Formas De Eliminar Elementos Duplicados En Un Arreglo Con Javascript](https://matiashernandez.dev/4-formas-de-eliminar-elementos-duplicados-en-un-arreglo-con-javascript)
+ - [No Necesitas Redux](https://matiashernandez.dev/no-necesitas-redux)
+ - [Algunos Errores Comunes Al Utilizar React Hooks](https://matiashernandez.dev/algunos-errores-comunes-al-utilizar-react-hooks)
 
 #### En Hashnode
 
-\- [React Native: Promesas y Callbacks en Módulos Nativos](https://h.matiashernandez.dev/react-native-promesas-y-callbacks-en-modulos-nativos)
-  - [Por que Clojure](https://h.matiashernandez.dev/por-que-clojure)
-  - [Agregar Módulos Nativos a Una Aplicación React Native](https://h.matiashernandez.dev/agregar-modulos-nativos-a-una-aplicacion-react-native)
+- [React Native: Promesas y Callbacks en Módulos Nativos](https://h.matiashernandez.dev/react-native-promesas-y-callbacks-en-modulos-nativos)
+ - [Por que Clojure](https://h.matiashernandez.dev/por-que-clojure)
+ - [Agregar Módulos Nativos a Una Aplicación React Native](https://h.matiashernandez.dev/agregar-modulos-nativos-a-una-aplicacion-react-native)
 
 #### En dev.to
 
-\- [Overview de Algunos Modernos Lenguajes de Programación](https://dev.to/matiasfha/overview-de-algunos-modernos-lenguajes-de-programacion-4j45)
-  - [Cómo Crear Animaciones con React Native](https://dev.to/matiasfha/como-crear-animaciones-con-react-native-38fm)
-  - [Crear un Component Wizard Utilizando React Hooks](https://dev.to/matiasfha/crear-un-componente-wizard-utilizando-usestate-react-hook-5le)
+- [Overview de Algunos Modernos Lenguajes de Programación](https://dev.to/matiasfha/overview-de-algunos-modernos-lenguajes-de-programacion-4j45)
+ - [Cómo Crear Animaciones con React Native](https://dev.to/matiasfha/como-crear-animaciones-con-react-native-38fm)
+ - [Crear un Component Wizard Utilizando React Hooks](https://dev.to/matiasfha/crear-un-componente-wizard-utilizando-usestate-react-hook-5le)
 
 ### Top lecciones en [egghead.io](http://egghead.io/instructors/matias-francisco-hernandez-arellano)
 
 Este 2020 logré publicar exitosamente 34 videos, algunos de ellos parte de alguna playlist o curso, o simplemente lecciones aisladas, de ellas resalto las siguientes:
-  
-  - [Curso - Construye Componentes Avanzados con React Hooks y Patrones de Diseño](https://egghead.io/playlists/hooks-3d62)
-  - [Playlist - Creación de un plugin de Gatsby desde cero](https://egghead.io/playlists/creacion-de-un-plugin-de-gatsby-desde-cero-5c8b)
-  - [Crear Animación con React Native y la API Animated](https://egghead.io/lessons/react-native-crear-animacion-con-react-native-y-la-api-animated)
+
+ - [Curso - Construye Componentes Avanzados con React Hooks y Patrones de Diseño](https://egghead.io/playlists/hooks-3d62)
+ - [Playlist - Creación de un plugin de Gatsby desde cero](https://egghead.io/playlists/creacion-de-un-plugin-de-gatsby-desde-cero-5c8b)
+ - [Crear Animación con React Native y la API Animated](https://egghead.io/lessons/react-native-crear-animacion-con-react-native-y-la-api-animated)
 
 ### Podcasts
 
@@ -102,25 +102,25 @@ Este 2020 logré publicar exitosamente 34 videos, algunos de ellos parte de algu
 
 En mi podcast personal, publiqué un total de 37 episodios, sin faltar una semana 💪
 
-\- [Hello World](https://www.cafecon.tech/1081172/3753524-hello-world)
-  - [Especial Junto a Javiera Tapia - Senior Ruby Developer en Globant](https://www.cafecon.tech/1081172/5843014-especial-junto-a-javiera-tapia-bobadilla-senior-ruby-developer-en-globant)
-  - [¿Qué necesitas para ser desarrollador web en 2020](https://www.cafecon.tech/1081172/4265723-que-necesitas-para-ser-desarrollador-web-en-2020)
+- [Hello World](https://www.cafecon.tech/1081172/3753524-hello-world)
+ - [Especial Junto a Javiera Tapia - Senior Ruby Developer en Globant](https://www.cafecon.tech/1081172/5843014-especial-junto-a-javiera-tapia-bobadilla-senior-ruby-developer-en-globant)
+ - [¿Qué necesitas para ser desarrollador web en 2020](https://www.cafecon.tech/1081172/4265723-que-necesitas-para-ser-desarrollador-web-en-2020)
 
 #### Top Episodios en Control Remoto
 
 Y en Control Remoto, junto a Camilo pudimos publicar 31 episodios con mucho material e investigación.
-  
-  - [Origins](https://www.controlremoto.io/episodios/origins)
-  - [La Entrevista](https://www.controlremoto.io/episodios/la-entrevista)
-  - [Auto Aprendiendo](https://www.controlremoto.io/episodios/autoaprendiendo)
+
+ - [Origins](https://www.controlremoto.io/episodios/origins)
+ - [La Entrevista](https://www.controlremoto.io/episodios/la-entrevista)
+ - [Auto Aprendiendo](https://www.controlremoto.io/episodios/autoaprendiendo)
 
 ### Top Newsletter
 
 El newsletter comenzó hace poco y en total hay 32 suscriptores. De los emails enviados los que tuvieron mejor recepción fueron:
-  
-  - [Piensa Pequeño Para Moverte Rápido](https://ckarchive.com/b/0vuwh9hnp582)
-  - [Aprender en Público, Compartir lo Que Sabes Para Mejorar](https://ckarchive.com/b/d0ueh0hvz5r6)
-  - [Fundamentos y Modelos Mentales](https://ckarchive.com/b/lmuehmhedr7m)
+
+ - [Piensa Pequeño Para Moverte Rápido](https://ckarchive.com/b/0vuwh9hnp582)
+ - [Aprender en Público, Compartir lo Que Sabes Para Mejorar](https://ckarchive.com/b/d0ueh0hvz5r6)
+ - [Fundamentos y Modelos Mentales](https://ckarchive.com/b/lmuehmhedr7m)
 
 ## ¿Qué se viene el 2021?
 
@@ -130,12 +130,11 @@ Este 2021 se viene con más y mejor contenido. Al menos eso estoy planificando p
 * Newsletter mejorado: Para mejorar [mi newsletter](http://matiashernandez.ck.page), al que te invito de unas, cambiaré la cadencia y contenido que se publicará transformándolo en mini-cursos que recibirás directamente en tu correo!, comenzando con un pequeño curso sobre React seguido por uno sobre Gatsby.
 * Podcasts: Café con Tech tomará direcciones más temáticas en los episodios solo y seguiré buscando más invitados! (Tienes a alguien en mente?). ¡Y en Control Remoto, tenemos mucho por planificar!
 * Artículos: Seguiré escribiendo en el blog, pero sin una cadencia determinada para evitar el burnout, pero sí que escribiré en freecodecamp al menos 2 artículos mensuales.
-* Mentorías y comunidad: Este año comencé a ofrecer mentorías por medio de la plataforma [buymeacoffee](https://buymeacoffee.com/matiasfha) a modo de abrir las puertas para ayudar a otros devs y al mismo tiempo generar un pequeño ingreso que soporte este trabajo, este 2021 seguiré con ello y reforzaré el trabajo para armar una pequeña comunidad en Discord, Por cierto puedes unirte al suscribirte en [buymeacoffee](https://buymeacoffee.com/matiasfha).   
-
+* Mentorías y comunidad: Este año comencé a ofrecer mentorías por medio de la plataforma [buymeacoffee](https://buymeacoffee.com/matiasfha) a modo de abrir las puertas para ayudar a otros devs y al mismo tiempo generar un pequeño ingreso que soporte este trabajo, este 2021 seguiré con ello y reforzaré el trabajo para armar una pequeña comunidad en Discord, Por cierto puedes unirte al suscribirte en [buymeacoffee](https://buymeacoffee.com/matiasfha). 
 ¿Más ideas? Sí, hay muchas más incluyendo más cursos, más videos en egghead, un ebook y más charlas, pero todo eso debe planificarse aún.
 
 ## Gracias
 
 Muchas gracias a todos quienes han leído, visto y escuchado mi material. A quienes comentan, comparten y a quien han dado su soporte.
-  
+
 **Gracias Totales**
